BUGFIX: HeroImageBlock full-width should look better on tablets

--- a/jetstream/static/jetstream/css/blocks/hero_image.less
+++ b/jetstream/static/jetstream/css/blocks/hero_image.less
@@ -156,7 +156,7 @@
       }
       .background {
         height: 60vw !important;
-        background-size: auto 100%;
+        background-size: 100%;
       }
     }
     .hero {
@@ -188,7 +188,7 @@
         right:0;
         .background {
           height: 60vw !important;
-          background-size: auto 100%;
+          background-size: 100%;
         }
         .body {
           position: static;
@@ -222,6 +222,12 @@
       }
       p {
         font-size: 0.8em;
+      }
+      .action-button-bar {
+        a.btn-info, a.btn-info:visited {
+          color: black;
+          text-decoration: underline;
+        }
       }
     }
   }
